code rework, fix SVG support with IDE 2023.2 EAP